using new flow for notification queue
